--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "^4.0.2",
-    "smooth-scroll": "^16.1.3"
+    "smooth-scroll": "^16.1.3",
+    "styled-components": "^5.3.0"
   },
   "lint-staged": {
     "src/**/*.{ts,tsx,js,jsx,json,css}": [
