--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "landingpage-react-template",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
