--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.3",
+    "@mui/icons-material": "^5.2.0",
     "@mui/material": "^5.2.1",
     "@mui/styles": "^5.2.1",
     "@testing-library/jest-dom": "^4.2.4",
