--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "landingpage-react-template",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.12.3",
     "@mui/icons-material": "^5.2.0",
