--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-material-ui-carousel": "^3.1.0",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "^4.0.2",
     "smooth-scroll": "^16.1.3",
     "styled-components": "^5.3.0"
